--- a/src/renderer/src/assets/css/styles.less
+++ b/src/renderer/src/assets/css/styles.less
@@ -3,17 +3,49 @@ body {
   flex-direction: column;
   font-family: Roboto, -apple-system, BlinkMacSystemFont, 'Helvetica Neue', 'Segoe UI', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Open Sans', sans-serif;
-  padding: 10px;
+  // padding: 10px;
   // color: #86a5b1;
   // background-color: #2f3241;
 }
 
-// * {
-//   padding: 0;
-//   margin: 0;
-// }
+* {
+  padding: 0;
+  margin: 0;
+}
+.header{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 10px;
+  height: 12vh;
+  // background-color: #2f3241;
+  color: #86a5b1;
+  font-size: 28px;
+  font-weight: 500;
+  user-select: none;
+}
 
+.content {
+  // flex: 1;
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  padding: 10px 20px 0 20px;
+  overflow-y: scroll;
+  max-height: 80vh;
+}
 
+.footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 6vh;
+  // background-color: #2f3241;
+  color: #86a5b1;
+  font-size: 14px;
+  font-weight: 500;
+  user-select: none;
+}
 
 // code {
 //   font-weight: 600;
